add more more functionality

--- a/contactUs.html
+++ b/contactUs.html
@@ -31,10 +31,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./registration.html">Register Stolen cars</a>
 
-            </li>
             <li class="nav-item">
               <a class="nav-link" href="./contactUs.html">Contact Us</a>
             </li>
@@ -76,6 +73,6 @@
       </ul>
     </div>
   </footer>
-  </>
+</body>
 
 </html>
