--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Spectral&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="./static/css/viewstolencars.css">
   <link rel="stylesheet" href="./static/css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous" defer></script>
   <title>Stolen-Car-Reg</title>
@@ -31,9 +32,7 @@
             <li class="nav-item">
               <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./registration.html">Register Stolen cars</a>
-            </li>
+
             <li class="nav-item">
               <a class="nav-link" href="./contactUs.html">Contact us</a>
             </li>
@@ -60,10 +59,10 @@
         <div class="container">
           <hr class="text-light">
           <div class="mt-4">
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter Chassis Number....">
+            <input type="text" class="form-control searchbox" id="formGroupExampleInput" placeholder="Enter Chassis Number....">
           </div>
           <div class="mt-4 col-12 ">
-            <button type="button" class="btn   text-light submit"> Search</button>
+            <button type="button" class="btn   text-light submit searchBx"> Search</button>
           </div>
 
         </div>
@@ -72,7 +71,77 @@
 
     </div>
   </div>
+  <div class="container-fluid  justify-content-center align-items-center    position-fixed start-0 end-0 top-0 bottom-0 pop pp">
 
+    <div class="  pop-up ">
+      <button class="btn btn-outline-warning close"><i class=" fa fa-times"></i></button>
+      <h5 class="pt-2">View Vehicle Report
+      </h5>
+      <hr>
+      <div class=" container-fluid row">
+
+        <div class="col-12 col-md-6 d-flex justify-content-center align-items-center ">
+          <img id="carImg" src="" alt="">
+
+        </div>
+        <div class="col-12 col-md-6 mb-2">
+
+          <h4 class="text-light text-center ms-auto me-auto ">Vehicle Description</h4>
+          <div class="row mk">
+            <div class="col-6 ">
+              <p class="text-center">Make</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center" id="carMake1"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <p class="text-center">Vehicle Type</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center" id="carType1"></p>
+            </div>
+          </div>
+          <div class="row mk">
+            <div class="col-6">
+              <p class="text-center">Exterior</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center" id="carExterior1"></p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <p class="text-center">Interior</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center" id="carInterior1"></p>
+            </div>
+          </div>
+          <div class="row mk">
+            <div class="col-6">
+              <p class="text-center">Licence Plate</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center" id="numberPlate1"></p>
+            </div>
+          </div>
+          <div class="row ">
+            <div class="col-6">
+              <p class="text-center">Chassis Number</p>
+            </div>
+            <div class="col-6">
+              <p class="text-center" id="chassis_Number1"></p>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+
+  </div>
   <footer class="mt-auto">
     <div class="container-fluid ">
       <ul class="d-flex justify-content-center">
