add links to pages

--- a/contactUs.html
+++ b/contactUs.html
@@ -26,13 +26,16 @@
         <div class="collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav  ms-auto list">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">View Stolen Cars</a>
+              <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Register Stolen cars</a>
+              <a class="nav-link" href="./registration.html">Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contactUs.html">Contact Us</a>
             </li>
           </ul>
         </div>
