--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="./registration.html">Sign Up</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="./contactUs.html">Contact us</a>
             </li>
