--- a/viewstolencars.html
+++ b/viewstolencars.html
@@ -35,7 +35,9 @@
             <li class="nav-item">
               <a class="nav-link" href="./viewstolencars.html">View Stolen Cars</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link" href="./registration.html">Sign Up</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="./contactUs.html">Contact Us</a>
             </li>
