--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 
         <div class="container">
           <hr class="text-light">
+          <form action=""></form>
           <div class="mt-4">
-            <input type="text" class="form-control searchbox" id="formGroupExampleInput" placeholder="Enter Chassis Number....">
+            <input type="text" class="form-control searchboxx" id="formGroupExampleInput" placeholder="Enter Chassis Number....">
           </div>
           <div class="mt-4 col-12 ">
-            <button type="button" class="btn   text-light submit searchBx"> Search</button>
+            <button type="submit" class="btn   text-light submit searchBx"> Search</button>
           </div>
-
+          </form>
         </div>
 
       </div>
