--- a/registration.html
+++ b/registration.html
@@ -46,16 +46,16 @@
     <div class="container tool ">
       <form action="">
         <div class="form-group" id="control">
-          <input type="text" class="form-control" id="firstname" placeholder="First Name">
-          <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+          <input type="text" class="form-control" id="firstname" placeholder="First Name" required>
+          <input type="text" class="form-control" id="lastname" placeholder="Last Name" required>
         </div>
         <div class="form-group" id="look">
-          <input type="text" class="form-control" id="username" placeholder="username">
-          <input type="email" class="form-control" id="email" placeholder="Email">
+          <input type="text" class="form-control" id="username" placeholder="username" required>
+          <input type="email" class="form-control" id="email" placeholder="Email" required>
         </div>
         <div class="form-group" id="love">
-          <input type="password" class="form-control" id="password" placeholder="Password">
-          <input type="password" class="form-control" id="confirmpassword" placeholder="Confirm Password">
+          <input type="password" class="form-control" id="password" placeholder="Password" required>
+          <input type="password" class="form-control" id="confirmpassword" placeholder="Confirm Password" required>
         </div>
         <div class="form-group d-flex justify-content-center align-items-center" id="admire">
           <button class="btn btn-primary">REGISTER</button>
